<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gray_background">

    <TextView
        android:id="@+id/room_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_room"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:id="@+id/room_dialog_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/room_dialog_title"/>
    <TextView
        android:id="@+id/room_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/room_dialog_line"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/dialog_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="5dp"
        android:hint="@string/name"
        android:textColor="@android:color/white"
        android:textColorHint="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/room_dialog_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/create_room_dialog_error_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/red"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_edt"/>

    <Button
        android:id="@+id/dialog_btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:backgroundTint="@color/dark_blue"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_room_dialog_error_txt"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>